--- a/disclaimer.html
+++ b/disclaimer.html
@@ -12,7 +12,7 @@
 <body style="margin:0; padding:0; background; font-family:Arial, Helvetica, sans-serif;">
 
 
-<div style="padding:70px 10px; box-sizing:border-box;">
+<div style="padding:30px 10px; box-sizing:border-box;">
 
   <div style="max-width:1200px; margin:0 auto; display:flex; flex-wrap:wrap; align-items:center; justify-content:space-between; gap:15px;">
 
@@ -484,7 +484,7 @@
 
     <!-- BRAND -->
     <div style="flex:1 1 0; min-width:240px;">
-      <img src="images/logo (2).png " alt="#" style="
+      <img src="images/logo (3).png " alt="#" style="
         max-width:180px;
         height:60px;
         margin:0 0 14px 0;
@@ -493,7 +493,7 @@
 
       <p style="font-size:16px; line-height:1.7; margin:0; color:#ffffff;">
         Smarter printing starts here. Discover top-rated printers, exceptional value, and
-        dedicated support — only at MicroTech Solutions.
+        dedicated support — only atSmart PrintOnline
       </p>
     </div>
 
