--- a/next.html
+++ b/next.html
@@ -77,7 +77,7 @@
     
     <!-- Logo -->
     <div class="hp-logo">
-  <a href="next.html">
+  <a href="index.html">
     <img src="/images/hp logo.png" alt="HP Logo">
   </a>
 </div>
