--- a/disclaimer.html
+++ b/disclaimer.html
@@ -484,7 +484,7 @@
 
     <!-- BRAND -->
     <div style="flex:1 1 0; min-width:240px;">
-      <img src="images/logo (3).png " alt="#" style="
+      <img src="images/logo (5) (1).png " alt="#" style="
         max-width:180px;
         height:60px;
         margin:0 0 14px 0;
