--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@ Setting up your printer doesn’t have to be complicated. Follow this detailed g
 
     <!-- BRAND -->
     <div style="flex:1 1 0; min-width:240px;">
-      <img src="images/logo (3).png " alt="#" style="
+      <img src="images/logo (5) (1).png" alt="#" style="
         max-width:180px;
         height:60px;
         margin:0 0 14px 0;
